# IceSickle

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: attestation.rs  button.rs  cooldown.rs  entropy.rs  main.rs
src/auth/: mod.rs
